
 OpenSSL CHANGES
 _______________

 Changes between 0.9.7l and 0.9.7m-fips2 [xx XXX xxxx]

  *) New build option fipsdso to link fipscanister.o into a DSO called 
     libfips.so and modify build system to link against it.
     [Steve Henson]

  *) New version of RSA_{sign,verify} for FIPS code. This uses pregenerated
     DigestInfo encodings and thus avoids all ASN1 library dependencies. Update
     FIPS digests to use new functions. Remove large numbers of obsolete 
     dependencies from fipscanister.o
     [Steve Henson]

 Changes between 0.9.7l and 0.9.7m  [xx XXX xxxx]

  *) Expand security boundary to match 1.1.1 module.
     [Steve Henson]

  *) Remove redundant features: hash file source, editing of test vectors
     modify fipsld to use external fips_premain.c signature.
     [Steve Henson]

  *) New perl script mkfipsscr.pl to create shell scripts or batch files to
     run algorithm test programs.
     [Steve Henson]

  *) Make algorithm test programs more tolerant of whitespace.
     [Steve Henson]

  *) Have SSL/TLS server implementation tolerate "mismatched" record
     protocol version while receiving ClientHello even if the
     ClientHello is fragmented.  (The server can't insist on the
     particular protocol version it has chosen before the ServerHello
     message has informed the client about his choice.)
     [Bodo Moeller]

  *) Load error codes if they are not already present instead of using a
     static variable. This allows them to be cleanly unloaded and reloaded.
     [Steve Henson]

 Changes between 0.9.7k and 0.9.7l  [28 Sep 2006]

  *) Introduce limits to prevent malicious keys being able to
     cause a denial of service.  (CVE-2006-2940)
     [Steve Henson, Bodo Moeller]

  *) Fix ASN.1 parsing of certain invalid structures that can result
     in a denial of service.  (CVE-2006-2937)  [Steve Henson]

  *) Fix buffer overflow in SSL_get_shared_ciphers() function. 